k8s/devops/ingress-devops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops
  namespace: devops
spec:
  ingressClassName: nginx
  rules:
    - host: abc.com
      http:
        paths:
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 8080
          - path: /jenkins
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
